# useless-conan-lib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: UselessClass.h
src/: UselessClass.cpp
