cmake_minimum_required(VERSION 3.1.2)

project("UselessLib")

set(LIBRARY_NAME "useless_lib")

include(${CMAKE_CURRENT_SOURCE_DIR}/conanbuildinfo.cmake)
conan_basic_setup()


set(BUILD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/output)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(USELESS_LIB_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(USELESS_LIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/UselessClass.cpp)

message("Useless library include path: " ${USELESS_LIB_INCLUDE_PATH})

add_library(${LIBRARY_NAME} STATIC ${USELESS_LIB_SOURCES}) 

target_include_directories(${LIBRARY_NAME} PUBLIC ${USELESS_LIB_INCLUDE_PATH}) 

add_subdirectory(tests)
